
JH/12 Expand items in router/transport headers_add or headers_remove lists
      individually rather than the list as a whole.  Bug 1452.

      Required for reasonable handling of multiple headers_ options when
      they may be empty; requires that headers_remove items with embedded
      colons must have them doubled (or the list-separator changed).


Exim version 4.82
-----------------

PP/01 Add -bI: framework, and -bI:sieve for querying sieve capabilities.

PP/02 Make -n do something, by making it not do something.
      When combined with -bP, the name of an option is not output.

PP/03 Added tls_dh_min_bits SMTP transport driver option, only honoured
      by GnuTLS.

PP/04 First step towards DNSSEC, provide $sender_host_dnssec for
      $sender_host_name and config options to manage this, and basic check
      routines.

PP/05 DSCP support for outbound connections and control modifier for inbound.

PP/06 Cyrus SASL: set local and remote IP;port properties for driver.
      (Only plugin which currently uses this is kerberos4, which nobody should
      be using, but we should make it available and other future plugins might
      conceivably use it, even though it would break NAT; stuff *should* be
      using channel bindings instead).

PP/07 Handle "exim -L <tag>" to indicate to use syslog with tag as the process
      name; added for Sendmail compatibility; requires admin caller.
      Handle -G as equivalent to "control = suppress_local_fixups" (we used to
      just ignore it); requires trusted caller.
      Also parse but ignore: -Ac -Am -X<logfile>
      Bugzilla 1117.

TL/01 Bugzilla 1258 - Refactor MAIL FROM optional args processing.

TL/02 Add +smtp_confirmation as a default logging option.

TL/03 Bugzilla 198 - Implement remove_header ACL modifier.
      Patch by Magnus Holmgren from 2007-02-20.

TL/04 Bugzilla 1281 - Spec typo.
      Bugzilla 1283 - Spec typo.
      Bugzilla 1290 - Spec grammar fixes.
